--- a/frontend/src/app/feature/table-view/components/table-display/table-display.component.html
+++ b/frontend/src/app/feature/table-view/components/table-display/table-display.component.html
@@ -1,7 +1,7 @@
 <div class="grid-layout">
   @if(gameService.gameSignal(); as game) {
   <div class="card card-compact w-72 md:w-72 lg:w-96   shadow-xl mt-4 md:mt-8 mx-auto bg-accent-content">
-    <figure><img src="../assets/images/fun_table{{random}}.png" alt="table" class="mx-auto w-full"></figure>
+    <figure><img src="../assets/images/fun_table{{randomImageNumber()}}.png" alt="table" class="mx-auto w-full"></figure>
     <div class="card-body grid grid-cols-3 gap-x-4 items-center mt-1 text-pretty">
       <div class="flex flex-col justify-center pl-2 lg:pl-8 text-[1.1rem]">
         <p class="mb-1 break-words">{{game.teamWhite.playerOne?.name}}</p>
