--- a/frontend/src/app/core/static/components/navbar/navbar.component.html
+++ b/frontend/src/app/core/static/components/navbar/navbar.component.html
@@ -1,13 +1,25 @@
-<nav class="flex-grow flex items-center justify-center"> <!-- Centering the navbar -->
-    <ul class="flex items-center space-x-3"> <!-- Adjusted spacing between nav items -->
-        <li>
-            <a routerLink="/" routerLinkActive="active" class="text-[2rem] lg:text-[2.5rem]">games</a>
-        </li>
-        <li>
-            <span class="text-orange-400 text-[2rem] lg:text-[2.5rem]">|</span>
-        </li>
-        <li>
-            <a routerLink="/score" routerLinkActive="active" class="text-[2rem] lg:text-[2.5rem]">score</a>
-        </li>
-    </ul>
+<nav class="flex-grow flex items-center justify-center">
+  <!-- Centering the navbar -->
+  <ul class="flex items-center space-x-3">
+    <!-- Adjusted spacing between nav items -->
+    <li>
+      <a
+        routerLink="/"
+        routerLinkActive="active"
+        class="text-[2rem] lg:text-[2.5rem]"
+        >games</a
+      >
+    </li>
+    <li>
+      <span class="text-orange-400 text-[2rem] lg:text-[2.5rem]">|</span>
+    </li>
+    <li>
+      <a
+        routerLink="/score"
+        routerLinkActive="active"
+        class="text-[2rem] lg:text-[2.5rem]"
+        >score</a
+      >
+    </li>
+  </ul>
 </nav>
