--- a/frontend/src/app/feature/score-view/score-view.component.html
+++ b/frontend/src/app/feature/score-view/score-view.component.html
@@ -1,6 +1,8 @@
 <div class="md:container md:mx-auto">
   <div class="overflow-x-auto mt-[3rem]">
-    <table class=" bg-base-300 table table-zebra lg:w-[40%] lg:md:w-[50%] mx-auto">
+    <table
+      class="bg-base-300 table table-zebra lg:w-[40%] lg:md:w-[50%] mx-auto"
+    >
       <!-- head -->
       <thead class="text-[1.5rem]">
         <tr>
@@ -11,9 +13,12 @@
       </thead>
       <tbody>
         <!-- loop over players and generate rows -->
-        <tr *ngFor="let player of scoreService.playersSignal(); let i = index" class="text-[1.25rem]">
+        <tr
+          *ngFor="let player of scoreService.playersSignal(); let i = index"
+          class="text-[1.25rem]"
+        >
           <th class="text-right">{{ i + 1 }}</th>
-          <td>{{ player.name }} </td>
+          <td>{{ player.name }}</td>
           <td class="text-right text-orange-400">{{ player.elo }}</td>
         </tr>
       </tbody>
