--- a/frontend/src/app/feature/table-view/table-view.component.html
+++ b/frontend/src/app/feature/table-view/table-view.component.html
@@ -1,4 +1,7 @@
 <div class="grid-layout">
-    <app-table-display *ngFor="let tableName of tablesSignal()" [tableName]="tableName"
-        class="tile"></app-table-display>
+  <app-table-display
+    *ngFor="let tableName of tablesSignal()"
+    [tableName]="tableName"
+    class="tile"
+  ></app-table-display>
 </div>
