--- a/frontend/libs/score/src/lib/score/score.component.html
+++ b/frontend/libs/score/src/lib/score/score.component.html
@@ -1,7 +1,7 @@
 <div class="md:container md:mx-auto">
-  <div class="overflow-x-auto mt-[3rem]">
+  <div class="mt-[3rem] overflow-x-auto">
     <table
-      class="bg-base-300 table table-zebra lg:w-[40%] lg:md:w-[50%] mx-auto"
+      class="table table-zebra mx-auto bg-base-300 lg:md:w-[50%] lg:w-[40%]"
     >
       <thead class="text-[1.5rem]">
         <tr>
