--- a/frontend/libs/ui/src/lib/navbar/navbar.component.html
+++ b/frontend/libs/ui/src/lib/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="flex-grow flex items-center justify-center">
+<nav class="flex flex-grow items-center justify-center">
   <ul class="flex items-center space-x-3">
     <li>
       <a
@@ -9,7 +9,7 @@
       >
     </li>
     <li>
-      <span class="text-orange-400 text-[2rem] lg:text-[2.5rem]">|</span>
+      <span class="text-[2rem] text-orange-400 lg:text-[2.5rem]">|</span>
     </li>
     <li>
       <a
