--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="flex items-center justify-center mt-2">
+<div class="mt-2 flex items-center justify-center">
   <lib-navbar></lib-navbar>
   <lib-theme-toggle-button></lib-theme-toggle-button>
 </div>
