--- a/frontend/libs/game/src/lib/game/game.component.html
+++ b/frontend/libs/game/src/lib/game/game.component.html
@@ -1,44 +1,44 @@
 @if (gameService.gameSignal(); as game) {
   <div
-    class="flex flex-col lg:flex-row justify-center items-center mt-3 mx-auto w-5/6 lg:mx-auto lg:w-2/3"
+    class="mx-auto mt-3 flex w-5/6 flex-col items-center justify-center lg:mx-auto lg:w-2/3 lg:flex-row"
   >
     <!-- Mobile view -->
     <div
-      class="flex justify-center items-center mx-auto card h-32 w-64 bg-accent-content rounded-lg lg:hidden"
+      class="card mx-auto flex h-32 w-64 items-center justify-center rounded-lg bg-accent-content lg:hidden"
     >
-      <div class="flex justify-center items-center">
-        <div class="text-[6rem] mr-3">{{ game.teamWhite.score }}</div>
+      <div class="flex items-center justify-center">
+        <div class="mr-3 text-[6rem]">{{ game.teamWhite.score }}</div>
         <div class="text-[6rem]">:</div>
-        <div class="text-[6rem] ml-3">{{ game.teamBlack.score }}</div>
+        <div class="ml-3 text-[6rem]">{{ game.teamBlack.score }}</div>
       </div>
     </div>
 
     <!-- Image container -->
-    <div class="flex justify-center items-center">
+    <div class="flex items-center justify-center">
       <!-- Mobile view -->
       <div class="lg:hidden">
         <img
           src="../assets/images/Sprite-0003.png"
-          class="transform rotate-90 ..."
+          class="... rotate-90 transform"
         />
       </div>
     </div>
 
     <!-- Desktop view -->
-    <div class="hidden lg:flex items-center justify-center">
+    <div class="hidden items-center justify-center lg:flex">
       <div class="flex items-center space-x-[6rem]">
         <div
-          class="card h-32 w-64 bg-accent-content flex justify-center items-center text-[11rem]"
+          class="card flex h-32 w-64 items-center justify-center bg-accent-content text-[11rem]"
         >
           {{ game.teamWhite.score }}
         </div>
         <img
           src="../assets/images/Sprite-0003.png"
-          class="rotate-90 h-full"
+          class="h-full rotate-90"
           alt="Your Image"
         />
         <div
-          class="card h-32 w-64 bg-accent-content flex justify-center items-center text-[11rem]"
+          class="card flex h-32 w-64 items-center justify-center bg-accent-content text-[11rem]"
         >
           {{ game.teamBlack.score }}
         </div>
@@ -47,7 +47,7 @@
   </div>
 
   <div
-    class="text-[2.5rem] lg:text-[4rem] text-red-800 flex justify-center mb-[1rem] lg:mb-[3rem] custom-font"
+    class="custom-font mb-[1rem] flex justify-center text-[2.5rem] text-red-800 lg:mb-[3rem] lg:text-[4rem]"
     *ngIf="game.gameMode === 'RANKED'; else hiddenContent"
   >
     ranked
@@ -57,10 +57,10 @@
   </ng-template>
 
   <!-- Player names -->
-  <div class="flex w-full my-auto lg:justify-center items-center text-[1.2rem]">
+  <div class="my-auto flex w-full items-center text-[1.2rem] lg:justify-center">
     @if (gameService.gameSignal().teamWhite; as white) {
       <div
-        class="grid h-24 flex-grow card bg-accent-content rounded-box place-items-center ml-7 lg:ml-9"
+        class="card ml-7 grid h-24 flex-grow place-items-center rounded-box bg-accent-content lg:ml-9"
       >
         <div class="flex text-[1.4rem]">
           <div>TEAM</div>
@@ -81,13 +81,13 @@
         </div>
       </div>
     }
-    <div class="divider divider-horizontal divider-warning text-[1.5rem]">
+    <div class="divider divider-warning divider-horizontal text-[1.5rem]">
       VS
     </div>
     <!-- Spacer for mobile view -->
     @if (gameService.gameSignal().teamBlack; as black) {
       <div
-        class="grid h-24 flex-grow card bg-accent-content rounded-box place-items-center mr-7 lg:mr-9"
+        class="card mr-7 grid h-24 flex-grow place-items-center rounded-box bg-accent-content lg:mr-9"
       >
         <div class="flex text-[1.3rem]">
           <div>TEAM</div>
@@ -113,7 +113,7 @@
   <div class="flex w-full justify-between">
     <div
       *ngIf="!this.renameWhite"
-      class="flex w-full lg:justify-center justify-center text-[1.2rem] mt-5"
+      class="mt-5 flex w-full justify-center text-[1.2rem] lg:justify-center"
     >
       <div
         class="tooltip tooltip-bottom tooltip-success"
@@ -130,7 +130,7 @@
 
     <div
       *ngIf="this.renameWhite"
-      class="flex w-full lg:justify-center justify-center text-[1.2rem] mt-5"
+      class="mt-5 flex w-full justify-center text-[1.2rem] lg:justify-center"
     >
       <input
         (keyup)="onKey($event)"
@@ -145,7 +145,7 @@
 
     <div
       *ngIf="!this.renameBlack"
-      class="flex w-full lg:justify-center justify-center text-[1.2rem] mt-5"
+      class="mt-5 flex w-full justify-center text-[1.2rem] lg:justify-center"
     >
       <div
         class="tooltip tooltip-bottom tooltip-success"
@@ -161,7 +161,7 @@
     </div>
     <div
       *ngIf="this.renameBlack"
-      class="flex w-full lg:justify-center justify-center text-[1.2rem] mt-5"
+      class="mt-5 flex w-full justify-center text-[1.2rem] lg:justify-center"
     >
       <input
         (keyup)="onKey($event)"
