--- a/frontend/libs/table/src/lib/table/table-display/table-display.component.html
+++ b/frontend/libs/table/src/lib/table/table-display/table-display.component.html
@@ -1,7 +1,7 @@
 <div class="grid-layout">
   @if (gameService.gameSignal(); as game) {
     <div
-      class="card card-compact w-72 md:w-72 lg:w-96 shadow-xl mt-4 md:mt-8 mx-auto bg-accent-content"
+      class="card card-compact mx-auto mt-4 w-72 bg-accent-content shadow-xl md:mt-8 md:w-72 lg:w-96"
     >
       <figure>
         <img
@@ -11,9 +11,9 @@
         />
       </figure>
       <div
-        class="card-body grid grid-cols-3 gap-x-4 items-center mt-1 text-pretty"
+        class="card-body mt-1 grid grid-cols-3 items-center gap-x-4 text-pretty"
       >
-        <div class="flex flex-col justify-center pl-2 lg:pl-8 text-[1.1rem]">
+        <div class="flex flex-col justify-center pl-2 text-[1.1rem] lg:pl-8">
           <p class="mb-1 break-words">{{ game.teamWhite.playerOne?.name }}</p>
           <p class="mt-0 break-words">{{ game.teamWhite.playerTwo?.name }}</p>
         </div>
@@ -21,15 +21,15 @@
           {{ game.teamWhite.score }}:{{ game.teamBlack.score }}
         </p>
         <div
-          class="flex flex-col justify-center pr-4 text-[1.1rem] text-pretty"
+          class="flex flex-col justify-center text-pretty pr-4 text-[1.1rem]"
         >
           <p class="mb-1 break-words">{{ game.teamBlack.playerOne?.name }}</p>
           <p class="mt-0 break-words">{{ game.teamBlack.playerTwo?.name }}</p>
         </div>
       </div>
-      <div class="card-actions justify-center m-3" *ngIf="tableName">
+      <div class="card-actions m-3 justify-center" *ngIf="tableName">
         <button
-          class="btn w-5/6 items-center btn-primary text-[1.25rem] btn-outline"
+          class="btn btn-outline btn-primary w-5/6 items-center text-[1.25rem]"
           [routerLink]="['/game', tableName]"
         >
           View
