--- a/frontend/libs/ui/src/lib/theme-toggle-button/theme-toggle-button.component.html
+++ b/frontend/libs/ui/src/lib/theme-toggle-button/theme-toggle-button.component.html
@@ -3,7 +3,7 @@
 
   <!-- sun icon -->
   <svg
-    class="swap-off fill-current w-7 h-7 lg:w-9 lg:h-9"
+    class="swap-off h-7 w-7 fill-current lg:h-9 lg:w-9"
     viewBox="0 0 24 24"
     xmlns="http://www.w3.org/2000/svg"
   >
@@ -14,7 +14,7 @@
 
   <!-- moon icon -->
   <svg
-    class="swap-on fill-current w-7 h-7 lg:w-9 lg:h-9"
+    class="swap-on h-7 w-7 fill-current lg:h-9 lg:w-9"
     viewBox="0 0 24 24"
     xmlns="http://www.w3.org/2000/svg"
   >
