--- a/frontend/libs/table/src/lib/table/table-display/table-display.component.html
+++ b/frontend/libs/table/src/lib/table/table-display/table-display.component.html
@@ -1,5 +1,5 @@
 <div class="grid-layout">
-  @if (gameService.gameSignal(); as game) {
+  @if (game(); as game) {
     <div
       class="card card-compact mx-auto mt-4 w-72 bg-accent-content shadow-xl md:mt-8 md:w-72 lg:w-96"
     >
