Fix template error

--- a/frontend/libs/game/src/lib/game/game.component.html
+++ b/frontend/libs/game/src/lib/game/game.component.html
@@ -137,7 +137,7 @@
       VS
     </div>
     <lib-game-team [team]="lastTeam()" />
-
+  </div>
   <div class="flex w-full justify-between">
     @if (renameWhite) {
       <div
