--- a/frontend/libs/game/src/lib/game/game.component.html
+++ b/frontend/libs/game/src/lib/game/game.component.html
@@ -33,9 +33,10 @@
           {{ game.teamWhite.score }}
         </div>
         <img
-          src="../assets/images/Sprite-0003.png"
+          ngSrc="../assets/images/Sprite-0003.png"
           class="h-full rotate-90"
-          alt="Your Image"
+          alt="Game image"
+          fill
         />
         <div
           class="card flex h-32 w-64 items-center justify-center bg-accent-content text-[11rem]"
