--- a/frontend/libs/game/src/lib/game/game.component.html
+++ b/frontend/libs/game/src/lib/game/game.component.html
@@ -17,10 +17,7 @@
     <div class="flex items-center justify-center">
       <!-- Mobile view -->
       <div class="lg:hidden">
-        <img
-          src="../assets/images/Sprite-0003.png"
-          class="... rotate-90 transform"
-        />
+        <img src="assets/images/sprite.jpg" class="rotate-90 transform" />
       </div>
     </div>
 
@@ -33,10 +30,9 @@
           {{ game.teamWhite.score }}
         </div>
         <img
-          ngSrc="../assets/images/Sprite-0003.png"
+          src="assets/images/sprite.jpg"
           class="h-full rotate-90"
           alt="Game image"
-          fill
         />
         <div
           class="card flex h-32 w-64 items-center justify-center bg-accent-content text-[11rem]"
