--- a/frontend/libs/game/src/lib/game/game.component.html
+++ b/frontend/libs/game/src/lib/game/game.component.html
@@ -17,7 +17,7 @@
     <div class="flex items-center justify-center">
       <!-- Mobile view -->
       <div class="lg:hidden">
-        <img src="assets/images/sprite.jpg" class="rotate-90 transform" />
+        <img src="assets/images/sprite.png" class="rotate-90 transform" />
       </div>
     </div>
 
@@ -30,7 +30,7 @@
           {{ game.teamWhite.score }}
         </div>
         <img
-          src="assets/images/sprite.jpg"
+          src="assets/images/sprite.png"
           class="h-full rotate-90"
           alt="Game image"
         />
