--- a/frontend/libs/game/src/lib/game/game.component.html
+++ b/frontend/libs/game/src/lib/game/game.component.html
@@ -108,65 +108,74 @@
   </div>
 
   <div class="flex w-full justify-between">
-    <div
-      *ngIf="!this.renameWhite"
-      class="mt-5 flex w-full justify-center text-[1.2rem] lg:justify-center"
-    >
+    @if (renameWhite) {
       <div
-        class="tooltip tooltip-bottom tooltip-success"
-        data-tip="of latest registered player"
+        class="mt-5 flex w-full justify-center text-[1.2rem] lg:justify-center"
       >
+        <input
+          #input
+          type="text"
+          placeholder="{{ game.teamWhite.playerOne?.name }}"
+          class="input input-bordered input-error w-full max-w-xs"
+        />
         <button
-          class="btn btn-outline btn-error"
-          (click)="changeName(whiteColor)"
+          class="btn btn-success ml-5"
+          (click)="submit(whiteColor, input.value)"
         >
-          Change name
+          Submit
         </button>
       </div>
-    </div>
-
-    <div
-      *ngIf="this.renameWhite"
-      class="mt-5 flex w-full justify-center text-[1.2rem] lg:justify-center"
-    >
-      <input
-        type="text"
-        placeholder="{{ game.teamWhite.playerOne?.name }}"
-        class="input input-bordered input-error w-full max-w-xs"
-      />
-      <button class="btn btn-success ml-5" (click)="submit(this.whiteColor)">
-        Submit
-      </button>
-    </div>
-
-    <div
-      *ngIf="!this.renameBlack"
-      class="mt-5 flex w-full justify-center text-[1.2rem] lg:justify-center"
-    >
+    } @else {
       <div
-        class="tooltip tooltip-bottom tooltip-success"
-        data-tip="of latest registered player"
+        class="mt-5 flex w-full justify-center text-[1.2rem] lg:justify-center"
       >
-        <button
-          class="btn btn-outline btn-error"
-          (click)="changeName(blackColor)"
+        <div
+          class="tooltip tooltip-bottom tooltip-success"
+          data-tip="of latest registered player"
         >
-          Change name
+          <button
+            class="btn btn-outline btn-error"
+            (click)="changeName(whiteColor)"
+          >
+            Change name
+          </button>
+        </div>
+      </div>
+    }
+
+    @if (renameBlack) {
+      <div
+        class="mt-5 flex w-full justify-center text-[1.2rem] lg:justify-center"
+      >
+        <input
+          #input
+          type="text"
+          placeholder="{{ game.teamBlack.playerOne?.name }}"
+          class="input input-bordered input-error w-full max-w-xs"
+        />
+        <button
+          class="btn btn-success ml-5"
+          (click)="submit(blackColor, input.value)"
+        >
+          Submit
         </button>
       </div>
-    </div>
-    <div
-      *ngIf="this.renameBlack"
-      class="mt-5 flex w-full justify-center text-[1.2rem] lg:justify-center"
-    >
-      <input
-        type="text"
-        placeholder="{{ game.teamBlack.playerOne?.name }}"
-        class="input input-bordered input-error w-full max-w-xs"
-      />
-      <button class="btn btn-success ml-5" (click)="submit(this.blackColor)">
-        Submit
-      </button>
-    </div>
+    } @else {
+      <div
+        class="mt-5 flex w-full justify-center text-[1.2rem] lg:justify-center"
+      >
+        <div
+          class="tooltip tooltip-bottom tooltip-success"
+          data-tip="of latest registered player"
+        >
+          <button
+            class="btn btn-outline btn-error"
+            (click)="changeName(blackColor)"
+          >
+            Change name
+          </button>
+        </div>
+      </div>
+    }
   </div>
 }
